--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ actix-web = "4"
 actix-multipart = "0.4"
 futures = "0.3"
 sanitize-filename = "0.5"
-env_logger = "0.10"
+tokio = { version = "1", features = ["full"] }
+env_logger = "0.9"
+log = "0.4"
